public/stylesheets/audio-thing.css
.container3 {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.no-touch {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

img {
    position: absolute;
    margin: 0;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    z-index: -1;
    object-fit: cover;
    filter: brightness(35%);
}

#controls {
    position: absolute;
    margin-bottom: 0;
    padding: 0;
    top: 10%;
    left: 4%;
    width: 400px;
    height: 600px;
    background: none;
    z-index: 2;
    display: none;
    flex-direction: column;
}

#trackBG {
    position: relative;
    margin-bottom: 1.5rem;
    width: 400px;
    height: 400px;
    border-radius: 15px;
    filter: drop-shadow(0 5mm 4mm black);
}

#song {
    color: #fff;
    text-decoration: none;
}

#artist {
    color: #ababab;
    text-decoration: none;
}

#album {
    color: #808080;
    text-decoration: none;
}

